--- a/Exercicios/Módulo 03/ex022/fundo006.html
+++ b/Exercicios/Módulo 03/ex022/fundo006.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /*Shorthand - background
+            color - image - position - repeat - [size] - attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +37,11 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur facilis ipsam saepe expedita cumque optio culpa explicabo asperiores in ab, ducimus aperiam corrupti! Eligendi, maxime possimus? Voluptatum commodi iste perspiciatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab velit vel dolorum alias recusandae ut temporibus facilis nulla et! Ab, corrupti alias. Asperiores, at perspiciatis soluta non quaerat explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi consequuntur, corrupti architecto deserunt ea ducimus officiis porro dolore sapiente? Laboriosam expedita beatae dolores harum nemo voluptatem asperiores temporibus voluptatum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur facilis ipsam saepe expedita cumque optio culpa explicabo asperiores in ab, ducimus aperiam corrupti! Eligendi, maxime possimus? Voluptatum commodi iste perspiciatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab velit vel dolorum alias recusandae ut temporibus facilis nulla et! Ab, corrupti alias. Asperiores, at perspiciatis soluta non quaerat explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi consequuntur, corrupti architecto deserunt ea ducimus officiis porro dolore sapiente? Laboriosam expedita beatae dolores harum nemo voluptatem asperiores temporibus voluptatum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur facilis ipsam saepe expedita cumque optio culpa explicabo asperiores in ab, ducimus aperiam corrupti! Eligendi, maxime possimus? Voluptatum commodi iste perspiciatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab velit vel dolorum alias recusandae ut temporibus facilis nulla et! Ab, corrupti alias. Asperiores, at perspiciatis soluta non quaerat explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi consequuntur, corrupti architecto deserunt ea ducimus officiis porro dolore sapiente? Laboriosam expedita beatae dolores harum nemo voluptatem asperiores temporibus voluptatum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur facilis ipsam saepe expedita cumque optio culpa explicabo asperiores in ab, ducimus aperiam corrupti! Eligendi, maxime possimus? Voluptatum commodi iste perspiciatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab velit vel dolorum alias recusandae ut temporibus facilis nulla et! Ab, corrupti alias. Asperiores, at perspiciatis soluta non quaerat explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi consequuntur, corrupti architecto deserunt ea ducimus officiis porro dolore sapiente? Laboriosam expedita beatae dolores harum nemo voluptatem asperiores temporibus voluptatum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur facilis ipsam saepe expedita cumque optio culpa explicabo asperiores in ab, ducimus aperiam corrupti! Eligendi, maxime possimus? Voluptatum commodi iste perspiciatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab velit vel dolorum alias recusandae ut temporibus facilis nulla et! Ab, corrupti alias. Asperiores, at perspiciatis soluta non quaerat explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi consequuntur, corrupti architecto deserunt ea ducimus officiis porro dolore sapiente? Laboriosam expedita beatae dolores harum nemo voluptatem asperiores temporibus voluptatum!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur facilis ipsam saepe expedita cumque optio culpa explicabo asperiores in ab, ducimus aperiam corrupti! Eligendi, maxime possimus? Voluptatum commodi iste perspiciatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab velit vel dolorum alias recusandae ut temporibus facilis nulla et! Ab, corrupti alias. Asperiores, at perspiciatis soluta non quaerat explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi consequuntur, corrupti architecto deserunt ea ducimus officiis porro dolore sapiente? Laboriosam expedita beatae dolores harum nemo voluptatem asperiores temporibus voluptatum!</p>
     </main>
 </body>
